[package]
name = "typed-routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-service = "2.0.2"
actix-web = "4.5.1"
concat-idents = "1.1.5"
const-str = "0.5.7"
gloo-net = "0.5.0"
http = "1.1.0"
serde = "1.0.197"
serde_urlencoded = "0.7.1"
thiserror = "1.0.58"
